--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,25 @@
 /tests/*
 /src/images/bin/*
 /install/*
-/assets/*
 /manager/*
+/assets/.thumbs/*
+/assets/backup/*
+/assets/cache/*
+/assets/docs/*
+/assets/export/*
+/assets/files/*
+/assets/flash/*
+/assets/images/*
+/assets/import/*
+/assets/js/*
+/assets/lib/*
+/assets/media/*
+/assets/modules/*
+/assets//*
+/assets/packages/*
+/assets/plugins/*
+/assets//*
+/assets/site/*
+/assets/snippets/*
+/assets/tvs/*
+/assets/*.html
